# remote-access-tool

./: .gitignore  CMakeLists.txt  git_automate.ps1
src/: main.cpp  screen_capture.cpp  screen_capture.h  webrtc_module.cpp  webrtc_module.h
